# palkia

./: Cargo.toml  README.md  todo.txt
examples/: game.rs
palkia_macros/: Cargo.toml
palkia_macros/src/: lib.rs
src/: access.rs  allocator.rs  builder.rs  callback.rs  component.rs  entities.rs  events.rs  lib.rs  messages.rs  query.rs  resource.rs  vtablesathome.rs  world.rs
src/fabricator/: blueprint.rs  factory.rs  mod.rs
src/resource/: mod.rs  storage.rs
src/serde/: component.rs  entity.rs  mod.rs  resource.rs  wrapper.rs
src/util/: mod.rs
src/world/: mod.rs  storage.rs
tests/: builder_access.rs  callbacks.rs  cancellation.rs  compose.rs  extensions.rs  extensions.rs.bak  insert_remove.rs  lazy.rs  liveness.rs  messages.rs  queries.rs  register.rs  serde.rs  spawn_despawn.rs  track.rs
tests/fabricator/: ctx.rs  ensure_sync.rs  loot_tables.rs  main.rs  simple.rs
tests/proc_macros/: main.rs
