[package]
name = "palkia"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Entity Component Message architecture a la Caves of Qud"
repository = "https://www.github.com/gamma-delta/palkia"
keywords = ["gamedev"]
categories = ["game-development"]

[dependencies]
ahash = "0.7.6"
crossbeam = "0.8.1"
downcast = "0.11.0"
generational-arena = "0.2.8"
indexmap = "1.9.1"

serde = { version = "1.0.143", optional = true, features = ["derive"] }

[dev-dependencies]
aglet = "0.1.1"
bincode = "1.3.3"
crossterm = "0.24.0"
fastrand = "1.7.0"

[features]
default = ["serde"]

serde = ["dep:serde", "ahash/serde", "generational-arena/serde"]

# https://github.com/rust-random/rand/issues/986
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
