[workspace]
members = ["palkia_macros"]

[package]
name = "palkia"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Entity Component Message architecture a la Caves of Qud"
repository = "https://www.github.com/gamma-delta/palkia"
keywords = ["gamedev"]
categories = ["game-development"]

[dependencies]
palkia_macros = { path = "./palkia_macros", version = "0.1.0", optional = true }

ahash = "0.7.6"
crossbeam = "0.8.1"
downcast = "0.11.0"
eyre = "0.6.8"
generational-arena = "0.2.8"
indexmap = "1.9.1"

# Blueprinting stuff
smol_str = "0.2.0"
thiserror = "1.0.43"
kdl = "4.6.0"
miette = "5.10.0"

# Serdeez nuts
serde = { version = "1.0.143", optional = true, features = ["derive"] }
knurdy = { version = "0.2.0", optional = true }

[dev-dependencies]
aglet = "0.1.1"
bincode = "1.3.3"
crossterm = "0.24.0"
fastrand = "1.7.0"

[features]
default = ["serde", "derive"]

serde = ["dep:serde", "ahash/serde", "generational-arena/serde", "dep:knurdy"]
derive = ["dep:palkia_macros"]

# https://github.com/rust-random/rand/issues/986
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
