[workspace]
members = ["palkia_macros"]

[package]
name = "palkia"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Entity Component Message architecture a la Caves of Qud"
repository = "https://www.github.com/gamma-delta/palkia"
keywords = ["gamedev"]
categories = ["game-development"]

[dependencies]
palkia_macros = { path = "./palkia_macros", version = "0.13.0" }

ahash = { version = "0.7.6", features = ["serde"] }
crossbeam = "0.8.1"
downcast = "0.11.0"
eyre = "0.6.8"
generational-arena = { version = "0.2.8", features = ["serde"] }
indexmap = "1.9.1"

# Blueprinting stuff
smol_str = "0.2.0"
thiserror = "1.0.43"
kdl = "4.6.0"
miette = "5.10.0"

# Serdeez nuts
serde = { version = "1.0.143", features = ["derive"] }
knurdy = { version = "0.2.0" }

# Vtables at home
linkme = "0.3"
typetag = "0.2.13"
erased-serde = "0.3.31"
paste = "1.0.14"

[dev-dependencies]
aglet = { version = "0.5.1", features = ["serde"] }
bincode = "1.3.3"
crossterm = { version = "0.24.0", features = ["serde"] }
fastrand = "1.7.0"

[features]

# https://github.com/rust-random/rand/issues/986
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
