[package]
name = "palkia_macros"
version = "0.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Proc macros for Palkia"
repository = "https://www.github.com/gamma-delta/palkia"
keywords = ["gamedev"]
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = "2.0.26"
